# Raven

./: Cargo.toml  tool_ecc_roadmap.md  workflow_ecc_roadmap.md
docs/embedding/: README.md  backend.md  configuration.md  performance.md
src/: error.rs  executor.rs  intent.rs  lib.rs  llm.rs  planner.rs
src/agent/runtime/: builder.rs  context.rs  dispatcher.rs  engine.rs  metrics.rs  report.rs  retry.rs  scheduler.rs  session.rs  traits.rs
src/ecc/: corrector.rs  engine.rs  errors.rs  mod.rs  pipeline.rs  policy.rs  report.rs  rules.rs  traits.rs  validator.rs
src/ecc/memory/: corrector.rs  rules.rs  scorer.rs  tests.rs
src/ecc/planner/: builder.rs  classifier.rs  context.rs  corrector.rs  engine.rs  errors.rs  mod.rs  pipeline.rs  policy.rs  reporter.rs  rules.rs  scorer.rs  stages.rs  types.rs  validator.rs
src/ecc/tool/: builder.rs  context.rs  (+12 more)
src/event/: mod.rs
src/knowledge/: builder.rs  chunk.rs  chunker.rs  context.rs  document.rs  errors.rs  hash.rs  loader.rs  manager.rs  metadata.rs  mod.rs  pipeline.rs  retrieval.rs  storage.rs  traits.rs  validator.rs
src/memory/: cache.rs  consolidation.rs  decay.rs  episodic.rs  error.rs  index.rs  long_term.rs  mod.rs  retrieval.rs  scoring.rs  semantic.rs  short_term.rs  storage.rs  working.rs
src/reflection/: engine.rs  mod.rs  tests.rs
src/telemetry/: mod.rs  opentelemetry.rs  prometheus.rs
src/tool/: context.rs  errors.rs  manage.rs  mod.rs  registry.rs  result.rs  schema.rs  tools.rs
src/workflow/: engine.rs  mod.rs  state.rs  tests.rs
tests/: integration_knowledge.rs  integration_metrics.rs
(+64 files in other folders)
