[package]
name = "raven_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
unicode-normalization = "0.1"
prometheus = "0.14"
blake3 = "1.4"
serde_yaml = "0.9"
parking_lot = "0.12"
tantivy = "0.19"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

[dev-dependencies]
pretty_assertions = "1.3"
tempfile = "3.5"
